<resources>
    <string name="app_name">LocalWebBrowser</string>
    <string name="close">关闭</string>
    <string name="open">打开</string>
    <string name="refresh">刷新</string>
    <string name="open_from_browser">从浏览器打开</string>
    <string name="form_browse">通过浏览器打开</string>
    <string name="save_image">保存图片</string>
    <string name="save_failure">保存失败</string>
    <string name="save_success">保存成功</string>
    <string name="collection">已收藏</string>
    <string name="cancel_collection">已取消收藏</string>
    <string name="muYou">还没有加载...</string>
    <string name="ok">确定</string>
    <string name="is_remove">是否要移除并扭送到"移除"列表?</string>
    <string name="cancel">取消</string>
    <string name="is_delete">是否永久删除?</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="data_loading">使劲加载中...</string>
    <string name="is_add2all_list">是否放回\"所有\"列表?</string>
    <string name="select_path">点我选择目录....</string>
    <string name="input_select_content_hint">输入要查找的内容...</string>
    <string name="sheJi_kaiFa"><![CDATA[设计&开发]]></string>
    <string name="OpenSource">
    tbs_sdk_thirdapp.jar\n
    ru.bartwell:exfilepicker:2.1\n
    com.android.support:design:25.2.0\n
    com.daimajia.swipelayout:library:1.2.0@aar\n
    org.greenrobot:greendao:3.2.2\n
    com.squareup.retrofit2:converter-gson:2.0.0-beta4\n
    com.squareup.retrofit2:converter-scalars:2.0.0-beta4\n
    universal-image-loader-1.9.5.jar\n
    com.davemorrissey.labs:subsampling-scale-image-view:3.6.0\n
    popupwindowmenu:1.0\n
    com.fynn.fluidlayout:fluidlayout:1.0\n
    cn.woblog.android:downloader:1.0.1\n\n
    </string>
    <string name="home_image">首页图片</string>
    <string name="ganhuo">
        <html><a href='#'>『每日妹子』</a>来源:\n
        <a href='http://gank.io/'>gank.io</a></html>干货集中营\n
    </string>
    <string name="bing">
        <html><a href='#'>『风景图片』</a>来源:\n
            <a href='https://bing.ioliu.cn/'>bing.ioliu.cn</a></html>必应图片
    </string>
    <string name="app_string">本地的网页浏览器。可以方便地浏览手机里缓存的网页。也可浏览/缓存在线网页。\n\n该软件开发的初衷是因为作者有次在手机中保存了很多离线网页,但是要打开浏览比较麻烦,为了方便浏览/管理所以开发了这款软件。它的作用就是把一堆网页文件汇集起来方便浏览(吧)</string>
    <string name="meizi_text">每日妹子</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="share_how">分享到哪里...</string>
    <string name="save_exist">保存过了</string>
    <string name="settings">设置</string>
    <string name="is_null">网址为空...</string>
    <string name="click_again">再按一次试试!</string>
    <string name="finish_toast">哼</string>
    <string name="home">首页</string>
    <string name="about">关于</string>
    <string name="web">浏览</string>
    <string name="help">使用帮助:</string>
    <string name="help_add">在侧滑菜单中点击选择目录,选择网页文件的目录,如:"Storage/sdcard/webFile/" 等待数据加载完成。</string>
    <string name="help_link">如果点击离线网页中的链接或输入地址访问的网页等都需要连接网络。</string>
    <string name="help_tag">如果浏览的网页中有需要左右滑动的功能,可能会与软件Tag的滑动冲突,可以点击右上角的全屏按钮切换到全屏模式或到设置中关闭Tag的滑动切换。</string>
    <string name="help_item_button">操作列表条目:在列表的条目中向左滑动可以得到三个按钮。移除，收藏和删除。</string>
    <string name="help_search">打开Overflow菜单获得更多操作</string>
    <string name="help_bug">该软件设计、开发、测试均由作者完成。难免会存在一些隐藏潜在的BUG。如果使用过程中遇到影响正常使用的BUG,可以通过邮箱告诉我。邮箱：xiajueya@outlook.com</string>
    <string name="copy_link_address">复制链接地址</string>
    <string name="save_local_web">保存离线网页</string>
    <string name="exit">退出</string>
    <string name="copy_success">复制成功</string>
    <string name="save_local_web_success">保存离线网页成功</string>
    <string name="save_local_web_exist">同名文件已存在，可能已经保存过了啦</string>
    <string name="save_local_web_failure">网页保存失败</string>
    <string name="address_error">地址错误呢</string>
    <string name="xiajue_name">夏觉</string>
    <string name="kaiyuan_shujuyuan">开源库/数据源:</string>
    <string name="load_error">访问网站出错</string>
    <string name="load_success_not_title">无标题</string>
    <string name="about_by">本地网页浏览器:LocalWebBrowser</string>
    <string name="version">版本:</string>
    <string name="this_project_address">项目地址:『<html><a href='#'>https://github.com/xiaJue/LocalBrowser</a></html>』</string>
    <string name="web_error_by">无法访问此网站</string>
    <string name="web_error_text">该网站拒绝我们连接或网络连接超时</string>
    <string name="settings_start">启动时:</string>
    <string name="settings_white">空白页</string>
    <string name="settings_last">从上次停下的地方继续</string>
    <string name="settings_in">打开特定的网页</string>
    <string name="settings_input">输入网址...</string>
    <string name="settings_show_image">显示首页每日图片</string>
    <string name="settings_dont_load_path">禁止加载多个目录的文件</string>
    <string name="settings_dont_load_path_text">不管选择了多少次目录都只加载最新选择的目录内的文件</string>
    <string name="settings_scroll_tag">滑动切换Tag</string>
    <string name="settings_scroll_tag_text">带有类似图片滑动的网页可能会带来滑动冲突</string>
    <string name="local_web_save_path">离线网页保存路径</string>
    <string name="settings_input_save_path">输入保存路径</string>
    <string name="settings_selete">选择</string>
    <string name="settings_image_save_path">图片保存路径</string>
    <string name="in_url_open">通过网址打开网页?</string>
    <string name="input_url">请输入网址</string>
    <string name="load_history">浏览历史</string>
    <string name="clear">清空</string>
    <string name="close_web">关闭网页</string>
    <string name="full_screen">全屏浏览</string>
    <string name="delete">删除</string>
    <string name="headerTitle">操作</string>
    <string name="picture_bing"><![CDATA[Picture&Bing]]></string>
    <string name="pb_project_address">项目地址:『<html><a href='#'>github.com/xiaJue/PictureBing</a></html>』</string>
    <string name="download"><html><a href='#'>下载</a></html></string>
    <string name="pb_by">项目推荐:每天更新一张清晰风景图片。『首页必应图片』</string>
    <string name="not_contents">还没有内容...</string>
    <string name="daShang">该软件完全开源、免费。非常感谢你下载使用。如果对你有帮助就再好不过。但是个人开发者并没有稳定的收入,如果支持的话可以请我喝杯咖啡。</string>
    <string name="download_success">下载成功。可在列表中查看</string>
    <string name="download_failure">下载失败</string>
    <string name="start_download">正在下载...</string>
    <string name="cant_download">无法下载该文件</string>
    <string name="check_update">检查更新</string>
    <string name="internet_error_dialog_title">玩坏了~没有网络</string>
    <string name="to_set_net">设置</string>
    <string name="load_meizi_image_error">加载\"妹子\"图片失败</string>
    <string name="load_bing_image_error">加载\"必应\"图片失败</string>
    <string name="file_not_exist">文件貌似不存在。可能已经删除或保存失败了。是否删除该条目?</string>
    <string name="file_exist">已经存在同名文件,是否重命名为[名称+当前时间]?</string>
    <string name="weixin">微信打赏</string>
    <string name="zhifubao">支付宝打赏</string>
    <string name="weixin_ds">weixin_ds</string>
    <string name="zfb_ds">zhifubao_ds</string>
    <string name="list">列表</string>
    <string name="cancel_full">取消全屏</string>
    <string name="common_website">常用网址:</string>
    <string name="version_update">应用有新版本了。可以到应用商店去更新了哦!</string>
    <string name="o_jb_k_la">知道了</string>
    <string name="not_bb_la">该版本不再提醒</string>
    <string name="download_ing">下载中...</string>
    <string name="ddd">关闭错误页面</string>
    <string name="url_error">页面链接貌似有问题：</string>
</resources>
