<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/yy_item_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/help"/>

            <TextView
                style="@style/about_text_style"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textColor="@color/titleTextColor"
                android:text="@string/help"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/about_text_style"
                android:layout_marginBottom="10dp"
                android:text="@string/help_add"/>

            <TextView
                style="@style/about_text_style"
                android:layout_marginBottom="10dp"
                android:text="@string/help_item_button"
                android:textSize="13sp"/>

            <TextView
                style="@style/about_text_style"
                android:layout_marginBottom="10dp"
                android:text="@string/help_search"
                android:textSize="13sp"/>

            <TextView
                style="@style/about_text_style"
                android:layout_marginBottom="10dp"
                android:text="@string/help_link"
                android:textSize="13sp"/>

            <TextView
                style="@style/about_text_style"
                android:layout_marginBottom="10dp"
                android:text="@string/help_tag"
                android:textSize="13sp"/>

            <TextView
                style="@style/about_text_style"
                android:layout_marginBottom="10dp"
                android:text="@string/help_bug"
                android:textSize="13sp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>