<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/yy_item_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/kyk"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/about_text_style"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/kaiyuan_shujuyuan"
                android:textColor="@color/titleTextColor"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/about_text_style"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="55dp"
        android:text="@string/OpenSource"/>

    <TextView
        style="@style/about_text_style"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="55dp"
        android:text="@string/home_image"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/home_about_ganke"
        style="@style/about_text_style"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="55dp"
        android:text="@string/ganhuo"
        android:textIsSelectable="false"/>

    <TextView
        android:id="@+id/home_about_bing"
        style="@style/about_text_style"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="55dp"
        android:text="@string/bing"
        android:textIsSelectable="false"/>

</LinearLayout>