<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/yy_item_bg"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/xj_icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/about_text_style"
                android:layout_marginBottom="5dp"
                android:text="@string/xiajue_name"
                android:textColor="@color/titleTextColor"
                android:textSize="15sp"/>

            <TextView
                style="@style/about_text_style"
                android:layout_marginBottom="5dp"
                android:text="@string/sheJi_kaiFa"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/home_about_daShang"
                style="@style/about_text_style"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/daShang"
                android:textIsSelectable="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/weixin_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/weixin"/>

                <ImageView
                    android:id="@+id/zhifubao_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/zhifubao"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>